--- a/remote/platformio.ini
+++ b/remote/platformio.ini
@@ -8,29 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; esp32 devkit
-[env:esp32doit-devkit-v1]
+[env:adafruit_qtpy_esp32c3]
 platform = espressif32
-board = esp32doit-devkit-v1
-
-; esp32-c3 devkit
-; [env:adafruit_qtpy_esp32c3]
-; platform = espressif32
-; board = adafruit_qtpy_esp32c3
-
-; pi pico
-; [env:pico]
-; platform = raspberrypi
-; board = pico
-
-
+board = adafruit_qtpy_esp32c3
 framework = arduino
-
-
 monitor_speed = 115200
+
+; set upload port
+upload_port = /dev/cu.usbmodem1101
+
 lib_deps = 
 	links2004/WebSockets@^2.4.1
-	adafruit/Adafruit NeoPixel@^1.12.0
 	bblanchon/ArduinoJson@^7.0.4
-	
-    
