--- a/remote/platformio.ini
+++ b/remote/platformio.ini
@@ -8,14 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; ESP32C3
 [env:adafruit_qtpy_esp32c3]
 platform = espressif32
 board = adafruit_qtpy_esp32c3
+
+; ; set upload port
+; upload_port = /dev/cu.usbmodem1101
+
+; ESP32
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; upload_port = /dev/tty.usbserial-0285F9A6
+; monitor_port = /dev/tty.usbserial-0285F9A6
+
+
 framework = arduino
 monitor_speed = 115200
 
-; set upload port
-upload_port = /dev/cu.usbmodem1101
 
 lib_deps = 
 	links2004/WebSockets@^2.4.1
